<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Notification_Tips_entity">You can disable it in Settings - Advanced settings - High temperature notification</string>
    <string name="Notification_Tips_title">High temp. notification enabled</string>
    <string name="about_update">Check for updates</string>
    <string name="about_version">Cooler Master V%s</string>
    <string name="accessibility_description">"2/2: Tap the switch at the upper right and tap \"OK\" to enable Cooler Master Long-Lasting Cooling.

Cooler Master uses accessibility features to close background apps. It does NOT collect your personal information even if you see a privacy risk alert."</string>
    <string name="action_bar_menu_share">Invite friends</string>
    <string name="ad_recommond">Recommended for you</string>
    <string name="add_nothing">No apps to add</string>
    <string name="add_tips">Choose apps to add</string>
    <string name="add_tips_num">%s apps selected</string>
    <string name="add_whitelist_add">Add</string>
    <string name="add_whitelist_title">Add apps</string>
    <string name="analyse_text">Scanning the phone…</string>
    <string name="analyse_text2">Scanning the CPU…</string>
    <string name="app_name">Cooler Master</string>
    <string name="authorize_detail">On Android 5.1.1 and above, Cooler Master needs your permission for accesing running apps to detect overheating apps and cool down your phone</string>
    <string name="authorize_masking_text">Cooler Master needs your permission to detect overheating apps</string>
    <string name="authorize_permit">Permit</string>
    <string name="authorize_title">Permission Required</string>
    <string name="checkcpu_btlow">Cool down</string>
    <string name="checkcpu_show_abnormal">CPU is overheated</string>
    <string name="checkcpu_show_heating">CPU is overheated</string>
    <string name="checkcpu_show_normal">CPU is OK</string>
    <string name="checkcpu_tips_abnormal">The following apps are using too much CPU which causes your phone to overheat</string>
    <string name="checkcpu_tips_clean">By cleaning the following %s background apps, the CPU usage will be reduced, and temperature will be lowered</string>
    <string name="checkcpu_tips_optimize">By cleaning the following %s background apps, the CPU usage will be reduced in order to prevent the temperature from rising</string>
    <string name="checkcpu_tips_special">%s overheating Ignore-listed apps detected</string>
    <string name="checkcpu_tips_special_checked">Checked apps will be removed from Ignore list</string>
    <string name="checkcpu_title">Cool down</string>
    <string name="checkcpu_twobt_clean">Clean up</string>
    <string name="checkcpu_whitelist_guide_text">Uncheck to add apps to Ignore list and prevent them from closing.</string>
    <string name="cooling_item_button">Learn More</string>
    <string name="cooling_textshow1_closed_abnormal">apps closed</string>
    <string name="cooling_textshow1_closed_heatingapp">apps closed</string>
    <string name="cooling_textshow1_closed_runningapp">apps closed</string>
    <string name="cooling_textshow1_heating">Phone temp. is a little high</string>
    <string name="cooling_textshow1_normal">Phone temp. is OK</string>
    <string name="cooling_textshow1_optimized">Just optimized</string>
    <string name="cooling_textshow2_charging">Battery temp. normally rises when charging</string>
    <string name="cooling_textshow2_normal">"Nothing's wrong. Just put down the phone for a while."</string>
    <string name="cooling_textshow2_nothing">No need to cool down</string>
    <string name="cooling_textshow2_wait">Now lock and leave your phone for a while</string>
    <string name="cooling_textshow2_wait5">Now lock and leave your phone for a while</string>
    <string name="cooling_textview_actionbar_title">Cool down</string>
    <string name="daily_title">Log</string>
    <string name="dialog_booster_warning_entity">Tips: To get better cooling effect, please enable “Long-lasting Cooling” in “Settings”</string>
    <string name="dialog_booster_warning_title">Long-lasting Cooling is disabled. Regular cooling will be used for cooling down.</string>
    <string name="evaluate_bt_cancel">No, thanks</string>
    <string name="evaluate_btfeedback">No, thanks</string>
    <string name="evaluate_btsure">OK, sure</string>
    <string name="evaluate_dialog_stars">5 stars</string>
    <string name="evaluate_feedback_title">Would you mind sending us your feedback?</string>
    <string name="evaluate_show1">Do you like Cooler Master?</string>
    <string name="evaluate_show2">How about giving %s as encouragement to our engineers?</string>
    <string name="evaluate_shunt_entity">Cooler Master cools down your phone and brings you fun!</string>
    <string name="evaluate_shunt_no">Not really</string>
    <string name="evaluate_shunt_ok">Great!</string>
    <string name="evaluate_shunt_title">Do you like Cooler Master?</string>
    <string name="facebook_network_error">Check your Internet connection and try again.</string>
    <string name="feed_back_title">Feedback</string>
    <string name="feedback_title">Feedback for Cooler Master (Version: %1$s, Build: %2$s, Phone model: %3$s)</string>
    <string name="feednack_body">Please describe your problem as detailed as possible, and we will try to fix it as fast as we can. Thank you for your feedback!</string>
    <string name="guide_button">Enable now</string>
    <string name="guide_entity">By using accessibility features, Cooler Master can completely close overheating apps and prevent them from re-launching, offering 50% more effective cooling.</string>
    <string name="guide_title">Enable Long-Lasting Cooling</string>
    <string name="guide_toast">Long-Lasting Cooling enabled</string>
    <string name="help_actionbar_btknoew">OK</string>
    <string name="help_actionbar_title">Help</string>
    <string name="language_auto">Automatic</string>
    <string name="language_change">The language of Cooler Master will turn into %s</string>
    <string name="log_clean">Empty the log</string>
    <string name="log_nothing">No log available</string>
    <string name="main_btcheck">Detect Overheating Apps</string>
    <string name="main_shunt_entity">You have already cooled down your phone with Cooler Master five times. How do you like it?</string>
    <string name="main_shunt_feedback">Feedback</string>
    <string name="main_shunt_later">Later</string>
    <string name="main_shunt_like">Love it</string>
    <string name="main_shunt_title">Cool down completed</string>
    <string name="masking_anim_tip1">Closing overheating apps and preventing them from re-launching</string>
    <string name="masking_anim_tip2">Long-Lasting Cooling might take more time but provides a 50% more cooling effect</string>
    <string name="masking_setting_dialog">1/2: Tap Cooler Master</string>
    <string name="more_assess">Rate this app</string>
    <string name="more_opinion">Feedback</string>
    <string name="more_share">Share</string>
    <string name="more_title">More</string>
    <string name="ms_entity">If your phone overheats or runs slow too often, we suggest you install an anti-virus app for deep detection</string>
    <string name="no_market_tips">You need to install Google Play to rate</string>
    <string name="notification_entity">Overheat detected</string>
    <string name="promotion_download">Get it</string>
    <string name="record_dateformat02">MM-dd</string>
    <string name="record_dateformat03">yy-MM-dd</string>
    <string name="record_hour">HH:mm</string>
    <string name="record_type_1_1">Phone is overheated. %s background app(s) closed</string>
    <string name="record_type_2_1">Phone temperature is normal. %s app(s) have been closed to reduce CPU usage and prevent overheating</string>
    <string name="record_type_3_1">Phone temperature is rising. %1$s abnormal app(s) closed: %2$s</string>
    <string name="record_type_5">Battery temperature is rising while the phone is charging</string>
    <string name="record_type_6">Phone is charging</string>
    <string name="record_type_7">No causes for overheating</string>
    <string name="record_type_8">Relax, your phone is all right</string>
    <string name="record_yesterday">"yesterday
"</string>
    <string name="send_receive_error">Connection failed. Please try again later.</string>
    <string name="setting_about">About</string>
    <string name="setting_booster">Long-lasting Cooling</string>
    <string name="setting_dvanced_title">Advanced settings</string>
    <string name="setting_language">Language</string>
    <string name="setting_notification">High temperature notification</string>
    <string name="setting_notification_entity">Notify me when phone temperature is higher than threshold</string>
    <string name="setting_show_unit">Temperature unit</string>
    <string name="setting_sound">Sound</string>
    <string name="setting_sound_close">Disable</string>
    <string name="setting_sound_open">Enable</string>
    <string name="setting_temp_hit">You can customize a temperature threshold. Temperature higher than this value indicates overheating state.</string>
    <string name="setting_temp_title">Temperature threshold</string>
    <string name="setting_title">Settings</string>
    <string name="share_app_content">"Cooler Master is a professional app designed to detect and lower your phone's temperature. My phone temperature is %s now, what about yours? 
Download: http://cool.easyxapp.com"</string>
    <string name="share_cancel">Cancel</string>
    <string name="share_confirm">Confirm</string>
    <string name="share_facebook">Facebook</string>
    <string name="share_failed">Failed to share, please try again later</string>
    <string name="share_mail">Mail</string>
    <string name="share_more">More</string>
    <string name="share_processing">Processing…</string>
    <string name="share_sms">SMS</string>
    <string name="share_to_tumblr">Share on Tumblr</string>
    <string name="share_to_twitter">Share on Twitter</string>
    <string name="share_tumblr">Tumblr</string>
    <string name="share_twitter">Twitter</string>
    <string name="share_whatsapp">WhatsApp</string>
    <string name="share_whatsapp_not_installed">WhatsApp not installed, please install first</string>
    <string name="whitelist_none">"Tap \"+\" to add apps to ignore list so they don't get closed"</string>
    <string name="whitelist_title">Ignore list</string>
    <string name="share_coolermaster">Share to</string>
</resources>