<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingTop="40.0dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <ImageView
            android:id="@id/guide_imageView_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24.0dip"
            android:layout_marginRight="24.0dip"
            android:contentDescription="@string/app_name"
            android:src="@drawable/guideicon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@id/guide_textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16.0dip"
                android:gravity="start"
                android:text="@string/guide_title"
                android:textColor="#ff000000"
                android:textSize="20.0sp" />

            <TextView
                android:id="@id/guide_textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="34.0dip"
                android:layout_marginRight="16.0dip"
                android:layout_marginTop="16.0dip"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/guide_entity"
                android:textColor="@color/genera_tipsAndLabelName_color"
                android:textSize="14.0sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="@color/setting_divider"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="56.0dip"
        android:orientation="horizontal">

        <com.andexert.library.RippleView
            android:id="@id/guide_textView_bt_cancel"
            android:layout_width="0.0dip"
            android:layout_height="56.0dip"
            android:layout_weight="1.0"
            android:gravity="center"
            app:rv_color="@color/ripple_color_whitebutton">

            <TextView
                android:id="@id/guide_textView_bt_cancel_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/main_shunt_later"
                android:textColor="@color/genera_tipsAndLabelName_color"
                android:textSize="18.0sp" />
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:id="@id/guide_textView_bt_sure"
            android:layout_width="0.0dip"
            android:layout_height="56.0dip"
            android:layout_weight="1.0"
            android:gravity="center"
            app:rv_color="@color/ripple_color_whitebutton">

            <TextView
                android:id="@id/guide_textView_bt_sure_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/guide_button"
                android:textColor="#ff0091ea"
                android:textSize="18.0sp" />
        </com.andexert.library.RippleView>
    </LinearLayout>
</LinearLayout>