<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:background="@drawable/background_1" android:layout_width="fill_parent" android:layout_height="@dimen/actionbar_height">
        <include android:id="@id/include_setting_actionbar" layout="@layout/actionbar" />
    </LinearLayout>
    <ScrollView android:id="@id/setting_scrollview" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="-2.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.andexert.library.RippleView android:gravity="center_vertical" android:id="@id/setting_layout_unit" android:paddingLeft="@dimen/genera_margin" android:paddingTop="2.0dip" android:paddingRight="@dimen/genera_margin" android:layout_width="fill_parent" android:layout_height="48.0dip" app:rv_color="@color/ripple_color_whitebutton">
                <TextView android:textSize="@dimen/seting_list_textsize" android:textColor="@color/genera_tipsAndLabelName_color" android:gravity="start" android:id="@id/setting_textView_Show_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_show_unit" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <ImageView android:gravity="end" android:id="@id/setting_ImageView_unit" android:background="@drawable/temperature_conversion_c" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/app_name" />
            </com.andexert.library.RippleView>
            <View android:background="@color/setting_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <RelativeLayout android:gravity="center_vertical" android:id="@id/setting_layout_sound" android:layout_width="fill_parent" android:layout_height="64.0dip" android:baselineAligned="false">
                <com.andexert.library.RippleView android:id="@id/setting_layout_sound_switch" android:layout_width="fill_parent" android:layout_height="64.0dip" app:rv_color="@color/ripple_color_whitebutton">
                    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="64.0dip" android:layout_marginLeft="@dimen/genera_margin">
                        <TextView android:textSize="@dimen/seting_list_textsize" android:textColor="@color/genera_tipsAndLabelName_color" android:gravity="start" android:id="@id/setting_textView_Show_tem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_sound" />
                        <TextView android:textSize="12.0sp" android:textColor="@color/genera_showtext_color" android:gravity="start" android:id="@id/setting_textView_Show_hit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_sound_open" />
                    </LinearLayout>
                    <com.easyx.view.materialanimatedswitch.MaterialAnimatedSwitch android:id="@id/setting_sound_switch" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_margin="@dimen/genera_margin" android:layout_alignParentRight="true" android:layout_centerVertical="true" app:icon_release="@null" app:icon_press="@null" app:base_release_color="#ffb8b8b8" app:base_press_color="#ffb3d9f0" app:ball_release_color="#fff1f1f1" app:ball_press_color="#ff0091ea" />
                </com.andexert.library.RippleView>
            </RelativeLayout>
            <View android:background="@color/setting_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <com.andexert.library.RippleView android:id="@id/setting_linearlayout_bt_DvancedSetting" android:paddingLeft="@dimen/genera_margin" android:paddingRight="@dimen/genera_margin" android:layout_width="fill_parent" android:layout_height="48.0dip" app:rv_color="@color/ripple_color_whitebutton">
                <ViewStub android:id="@id/setting_redpoint_devanced" android:layout="@layout/redpoint_new" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_toRightOf="@id/setting_textView_DvancedSetting" android:layout_centerVertical="true" />
                <TextView android:textSize="@dimen/seting_list_textsize" android:textColor="@color/genera_tipsAndLabelName_color" android:gravity="start" android:id="@id/setting_textView_DvancedSetting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_dvanced_title" android:layout_centerVertical="true" />
            </com.andexert.library.RippleView>
            <View android:background="@color/setting_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <com.andexert.library.RippleView android:gravity="center_vertical" android:id="@id/setting_linearlayout_bt_whitelist" android:paddingLeft="@dimen/genera_margin" android:paddingRight="@dimen/genera_margin" android:layout_width="fill_parent" android:layout_height="48.0dip" app:rv_color="@color/ripple_color_whitebutton">
                <TextView android:textSize="@dimen/seting_list_textsize" android:textColor="@color/genera_tipsAndLabelName_color" android:gravity="start" android:id="@id/setting_textView_whitelist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/whitelist_title" />
            </com.andexert.library.RippleView>
            <View android:background="@color/setting_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <com.andexert.library.RippleView android:gravity="center_vertical" android:id="@id/setting_linearlayout_bt_language" android:paddingLeft="@dimen/genera_margin" android:paddingRight="@dimen/genera_margin" android:layout_width="fill_parent" android:layout_height="64.0dip" app:rv_color="@color/ripple_color_whitebutton">
                <TextView android:textSize="@dimen/seting_list_textsize" android:textColor="@color/genera_tipsAndLabelName_color" android:gravity="start" android:id="@id/setting_textView_language" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_language" />
                <TextView android:textSize="12.0sp" android:textColor="@color/genera_showtext_color" android:gravity="start" android:id="@id/setting_textView_language_Show_hit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_below="@id/setting_textView_language" />
            </com.andexert.library.RippleView>
            <TextView android:textSize="14.0sp" android:textColor="@color/old_background_blue" android:gravity="start" android:id="@id/setting_textView_more_show" android:paddingLeft="@dimen/genera_margin" android:paddingRight="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/genera_margin" android:text="@string/more_title" />
            <com.andexert.library.RippleView android:gravity="center_vertical" android:id="@id/setting_linearlayout_bt_help" android:paddingLeft="@dimen/genera_margin" android:paddingRight="@dimen/genera_margin" android:layout_width="fill_parent" android:layout_height="48.0dip" app:rv_color="@color/ripple_color_whitebutton">
                <TextView android:textSize="@dimen/seting_list_textsize" android:textColor="@color/genera_tipsAndLabelName_color" android:gravity="start" android:id="@id/setting_textView_help" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_actionbar_title" />
            </com.andexert.library.RippleView>
            <View android:background="@color/setting_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <com.andexert.library.RippleView android:gravity="center_vertical" android:id="@id/setting_layout_about" android:paddingLeft="@dimen/genera_margin" android:paddingRight="@dimen/genera_margin" android:layout_width="fill_parent" android:layout_height="48.0dip" app:rv_color="@color/ripple_color_whitebutton">
                <TextView android:textSize="@dimen/seting_list_textsize" android:textColor="@color/genera_tipsAndLabelName_color" android:gravity="start" android:id="@id/setting_textView_about" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_about" />
            </com.andexert.library.RippleView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>